ファイル整理

--- a/scss/01_foundation/variable/_base.scss
+++ b/scss/01_foundation/variable/_base.scss
@@ -1,4 +1,5 @@
-@use "../00_global" as *;
+@use "./color" as *;
+@use "./font" as *;
 /* ===============================================
 Base
 =============================================== */
