--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,4 @@
-@use "00_global" as *;
 @use "01_foundation" as *;
-@use "02_layout" as *;
-@use "03_module" as *;
-@use "04_block" as *;
+@use "02_layouts" as *;
+@use "03_modules" as *;
+@use "04_blocks" as *;
