--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 /* ===============================================
+breakpoint
+=============================================== */
+/* ===============================================
 font-size
 =============================================== */ /* ===============================================
 Reset
@@ -93,7 +96,7 @@ video {
   font: inherit;
   vertical-align: bottom;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 article,
@@ -146,7 +149,8 @@ table {
 Base
 =============================================== */
 body {
-  font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", "メイリオ", "Hiragino Kaku Gothic ProN", "Hiragino Sans", sans-serif;
+  font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", "メイリオ", "Hiragino Kaku Gothic ProN",
+    "Hiragino Sans", sans-serif;
   font-weight: 600;
   line-height: 1.6;
   color: #242422;
@@ -232,11 +236,11 @@ Layout
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   width: 100%;
   height: 56px;
   padding: 0 16px;
@@ -248,7 +252,7 @@ Layout
 .header .l-S01.scroll-nav {
   background: #fff;
   -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
-          box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
 @media screen and (min-width: 1200px) {
@@ -365,7 +369,7 @@ hamburger
   left: 0;
   width: 100%;
   height: 10px;
-  background-image: url(../../images/common/background_beigeLine.svg);
+  background-image: url(../../img/common/background_beigeLine.svg);
   background-repeat: repeat-x;
   background-size: cover;
   background-position: bottom;
@@ -383,14 +387,14 @@ hamburger
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .m-headerNav__box .b-nav__item {
@@ -404,7 +408,7 @@ hamburger
   bottom: 0px;
   margin: auto 0;
   -webkit-transform: translateY(-4px);
-          transform: translateY(-4px);
+  transform: translateY(-4px);
   width: 34px;
   height: 30px;
   background-repeat: no-repeat;
@@ -455,7 +459,8 @@ hamburger
   background-color: #242422;
   border-radius: 3px;
 }
-.hamburger:before, .hamburger:after {
+.hamburger:before,
+.hamburger:after {
   content: "";
   position: absolute;
   display: block;
@@ -516,14 +521,14 @@ hamburger
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
     gap: 0 24px;
   }
   .m-headerNav__box .b-nav__item a {
@@ -937,11 +942,11 @@ Block
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   width: 56px;
   height: 56px;
   border-radius: 50%;
@@ -963,11 +968,11 @@ Block
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   gap: 0 12px;
   background-color: #fff;
   border-radius: 10px;
@@ -975,7 +980,7 @@ Block
 }
 .b-guidance img {
   -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
   height: auto;
 }
 .b-guidance .b-guidanceNumber {
@@ -985,10 +990,12 @@ Block
   right: 0;
   margin: 0 auto;
 }
-.b-guidance--service, .b-guidance--reason {
+.b-guidance--service,
+.b-guidance--reason {
   padding: 24px;
 }
-.b-guidance--service .b-guidanceIcon, .b-guidance--reason .b-guidanceIcon {
+.b-guidance--service .b-guidanceIcon,
+.b-guidance--reason .b-guidanceIcon {
   width: 100px;
 }
 .b-guidance--flow {
@@ -1004,11 +1011,11 @@ Block
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   text-align: center;
   background-color: #fff;
   border-radius: 4px;
@@ -1017,7 +1024,7 @@ Block
 }
 .b-about__guidance img {
   -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
   height: auto;
 }
 .b-about__guidance .b-about__guidanceLabel {
@@ -1071,19 +1078,19 @@ Block
   background-color: #fff;
   border-radius: 16px;
   -webkit-box-shadow: 32px 32px 0 #e9525e;
-          box-shadow: 32px 32px 0 #e9525e;
+  box-shadow: 32px 32px 0 #e9525e;
 }
 .b-boxFlame__shift--blue {
   -webkit-box-shadow: 36px 36px 0 #08b9d6;
-          box-shadow: 36px 36px 0 #08b9d6;
+  box-shadow: 36px 36px 0 #08b9d6;
 }
 .b-boxFlame__shift--pink {
   -webkit-box-shadow: 32px 32px 0 #e9525e;
-          box-shadow: 32px 32px 0 #e9525e;
+  box-shadow: 32px 32px 0 #e9525e;
 }
 .b-boxFlame__shift--purple {
   -webkit-box-shadow: 32px 32px 0 #7070d1;
-          box-shadow: 32px 32px 0 #7070d1;
+  box-shadow: 32px 32px 0 #7070d1;
 }
 
 @media screen and (min-width: 960px) {
@@ -1095,8 +1102,8 @@ Block
   .b-guidance {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     text-align: center;
     border-radius: 16px;
   }
