--- a/scss/04_blocks/_b-hamburger.scss
+++ b/scss/04_blocks/_b-hamburger.scss
@@ -1,4 +1,4 @@
-@use "../00_global" as *;
+@use "../01_foundation" as *;
 /* ===============================================
 hamburger
 =============================================== */
@@ -26,7 +26,7 @@ hamburger
     left: 0;
     width: 100%;
     height: 10px;
-    background-image: url(../../images/common/background_beigeLine.svg);
+    background-image: url(../../img/common/background_beigeLine.svg);
     background-repeat: repeat-x;
     background-size: cover;
     background-position: bottom;
