heroレイアウト

--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,10 @@ Layout
 /*
   hero
 ----------------------------------------------- */
+.s-hero .l-S01 {
+  height: 100vh;
+}
+
 /*
   about
 ----------------------------------------------- */
