--- a/scss/02_layouts/_l-main.scss
+++ b/scss/02_layouts/_l-main.scss
@@ -5,11 +5,17 @@
 /*
   hero
 ----------------------------------------------- */
+.s-hero {
+  .l-S01 {
+    height: 100vh;
+  }
+}
 
 /*
   about
 ----------------------------------------------- */
-
+.s-about {
+}
 /*
   service
 ----------------------------------------------- */
