--- a/scss/04_blocks/_b-flame.scss
+++ b/scss/04_blocks/_b-flame.scss
@@ -107,8 +107,8 @@
   }
 }
 .b-boxFlame__lineCircle {
-  width: 268px;
-  height: 268px;
+  // width: 268px;
+  // height: 268px;
   background-color: $whiteColor;
   border-radius: 50%;
   border: 3px solid $pinkColor;
