--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,11 @@ img {
   display: block;
 }
 
+@media screen and (max-width: 700px) {
+  .spbr {
+    display: block;
+  }
+}
 /* ===============================================
 Layout
 =============================================== */
@@ -279,6 +284,44 @@ Layout
 /*
   about
 ----------------------------------------------- */
+.s-about .l-L04 {
+  background-color: #e9525e;
+}
+.s-about .l-L05, .s-about .l-L07 {
+  max-width: 930px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.s-about .l-L07 .b-aboutReception__box {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 33%;
+          flex: 0 0 33%;
+}
+.s-about .l-L07 .b-aboutReception__box .b-boxFlame__lineCircle {
+  position: relative;
+  width: 100%;
+}
+.s-about .l-L07 .b-aboutReception__box .b-boxFlame__lineCircle::before {
+  content: "";
+  display: block;
+  padding-top: 100%;
+}
+.s-about .l-L07 .b-aboutReception__box .b-boxFlame__lineCircle img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 50%;
+  height: auto;
+}
+
 /*
   service
 ----------------------------------------------- */
@@ -1061,8 +1104,6 @@ Block
 }
 
 .b-boxFlame__lineCircle {
-  width: 268px;
-  height: 268px;
   background-color: #fff;
   border-radius: 50%;
   border: 3px solid #e9525e;
@@ -1148,5 +1189,24 @@ Block
   .b-aboutContents .b-guidance__icon {
     width: 175px;
     margin-bottom: 24px;
+  }
+}
+.b-aboutReception__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 8px 0;
+}
+
+@media screen and (min-width: 960px) {
+  .b-aboutReception__box:not(:last-child) .b-aboutReception__text {
+    padding-top: 20px;
   }
 }
