--- a/scss/02_layouts/_l-main.scss
+++ b/scss/02_layouts/_l-main.scss
@@ -15,19 +15,37 @@
   about
 ----------------------------------------------- */
 .s-about {
+  & .l-L01 {
+    padding: 104px 0 80px 0;
+  }
+  & .l-L02 {
+    padding-bottom: 40px;
+  }
   & .l-L04 {
+    padding: 56px 0;
     background-color: $pinkColor;
   }
-  & .l-L05,
+  & .l-L06 {
+    padding: 160px 0 104px 0;
+  }
   & .l-L07 {
+    padding-bottom: 40px;
+  }
+  & .l-L05,
+  & .l-L08 {
     max-width: 930px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
   }
-  & .l-L07 {
+  & .l-L05 {
+    align-items: center;
+  }
+  & .l-L08 {
+    gap: 0 64px;
+
     & .b-aboutReception__box {
-      flex: 0 0 33%;
+      flex: 1;
       & .b-boxFlame__lineCircle {
         position: relative;
         width: 100%;
