--- a/scss/04_blocks/_b-parts.scss
+++ b/scss/04_blocks/_b-parts.scss
@@ -1,18 +1,14 @@
 @use "../01_foundation" as *;
 
-.b-aboutReception__box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 8px 0;
-}
-
-@include mq(l) {
-  .b-aboutReception__box {
-    &:not(:last-child) {
-      & .b-aboutReception__text {
-        padding-top: 20px;
-      }
-    }
+.b-aboutReception {
+  &__box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px 0;
+  }
+  &__boxText {
+    text-align: center;
+    margin: auto 0;
   }
 }
