--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,28 @@ Layout
   l-main
 ----------------------------------------------- */
 /*
+  common
+----------------------------------------------- */
+.s-about .l-L01,
+.s-service .l-L01,
+.s-reason .l-L01,
+.s-flow .l-L01,
+.s-creator .l-L01,
+.s-faq .l-L01,
+.s-message .l-L01 {
+  padding: 104px 0 80px 0;
+}
+.s-about .l-L02,
+.s-service .l-L02,
+.s-reason .l-L02,
+.s-flow .l-L02,
+.s-creator .l-L02,
+.s-faq .l-L02,
+.s-message .l-L02 {
+  padding-bottom: 40px;
+}
+
+/*
   hero
 ----------------------------------------------- */
 .s-hero .l-S01 {
@@ -283,12 +305,6 @@ Layout
 /*
   about
 ----------------------------------------------- */
-.s-about .l-L01 {
-  padding: 104px 0 80px 0;
-}
-.s-about .l-L02 {
-  padding-bottom: 40px;
-}
 .s-about .l-L04 {
   padding: 56px 0;
   background-color: #e9525e;
@@ -345,6 +361,71 @@ Layout
 /*
   service
 ----------------------------------------------- */
+.s-service .l-L04 {
+  padding: 106px 0 56px 0;
+  background-color: #ffae18;
+}
+.s-service .l-L05 {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.s-service .l-L05 {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.s-service .l-L06 {
+  padding-bottom: 104px;
+}
+.s-service .l-L07, .s-service .l-L10, .s-service .l-L13 {
+  padding-top: 160px;
+}
+.s-service .l-L08, .s-service .l-L11, .s-service .l-L14 {
+  padding-bottom: 40px;
+}
+.s-service .l-L09 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 104px 64px;
+}
+.s-service .l-L09 .kari-1, .s-service .l-L09 .kari-2 {
+  width: calc((100% - 64px) / 2);
+  height: 226px;
+}
+.s-service .l-L09 .kari-3 {
+  width: 100%;
+  height: 174px;
+}
+.s-service .kari-4 {
+  width: 100%;
+  height: 395px;
+}
+.s-service .l-L15 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 0 64px;
+}
+.s-service .l-L15 .kari-5, .s-service .l-L15 .kari-6 {
+  width: calc((100% - 64px) / 2);
+  height: 452px;
+}
+
 /*
   difference
 ----------------------------------------------- */
@@ -1111,8 +1192,6 @@ Block
 }
 
 .b-boxFlame__line {
-  width: 200px;
-  height: 200px;
   background-color: #fff;
   border-radius: 16px;
   border: 3px solid #ffae18;
@@ -1180,7 +1259,7 @@ Block
   }
   .b-guidance--service {
     width: 360px;
-    padding: 80px 24px 30px;
+    padding: 80px 16px 30px;
   }
   .b-guidance--service .b-guidance__icon {
     width: 150px;
@@ -1188,7 +1267,7 @@ Block
   }
   .b-guidance--reason {
     width: 360px;
-    padding: 60px 24px 30px;
+    padding: 60px 16px 30px;
   }
   .b-guidance--reason .b-guidance__icon {
     width: 180px;
