--- a/scss/04_blocks/_b-flame.scss
+++ b/scss/04_blocks/_b-flame.scss
@@ -94,8 +94,8 @@
 }
 
 .b-boxFlame__line {
-  width: 200px;
-  height: 200px;
+  // width: 200px;
+  // height: 200px;
   background-color: $whiteColor;
   border-radius: 16px;
   border: 3px solid $orangeColor;
@@ -159,7 +159,7 @@
 
     &--service {
       width: 360px;
-      padding: 80px 24px 30px;
+      padding: 80px 16px 30px;
       & .b-guidance__icon {
         width: 150px;
         margin-bottom: 24px;
@@ -168,7 +168,7 @@
 
     &--reason {
       width: 360px;
-      padding: 60px 24px 30px;
+      padding: 60px 16px 30px;
       & .b-guidance__icon {
         width: 180px;
         margin-bottom: 24px;
