--- a/scss/02_layouts/_l-main.scss
+++ b/scss/02_layouts/_l-main.scss
@@ -161,6 +161,9 @@
     display: flex;
     justify-content: space-between;
   }
+  & .l-L06 {
+    padding-bottom: 104px;
+  }
   & .l-L07 {
     display: flex;
     justify-content: space-between;
